--- a/coming-soon.html
+++ b/coming-soon.html
@@ -34,67 +34,72 @@
     <nav>
         <div class="nav-left">
             <div class="logo">
-                <a href="/"><img src="assets/images/logo/logo.png" alt="Nirmal" loading="lazy"></a>
+                <a href="/"><img src="assets/images/logo/logo.png" alt="Nirmal" loading="lazy" width="50" height="50"></a>
             </div>
             <div class="line"></div>
             <div class="group-logo">
-                <img src="assets/images/logo/group-logo.jpg" alt="Group Nirmal" loading="lazy">
+                <img src="assets/images/logo/group-logo.jpg" alt="Group Nirmal" loading="lazy" width="50" height="50">
             </div>
             <div class="menu-btn">
-                <button><img src="assets/images/svg/menu.svg" alt="icon" loading="lazy"> MENU</button>
+                <button><img src="assets/images/svg/menu.svg" alt="icon" loading="lazy" width="20" height="20"> MENU</button>
             </div>
         </div>
         <div class="nav-right">
             <div class="social-icons">
-                <a href="https://www.facebook.com/groupnirmal?mibextid=ZbWKwL" target="_blank"><img src="assets/images/svg/facebook.svg" alt="facebook" loading="lazy"></a>
-                <a href="https://www.instagram.com/group.nirmal?igsh=MWFxZ3BqZzgzamhibg==" target="_blank"><img src="assets/images/svg/instagram.svg" alt="instagram" loading="lazy"></a>
-                <a href="https://www.linkedin.com/company/nirmal-wires-private-limited/" target="_blank"><img src="assets/images/svg/linkedin.svg" alt="linkedin" loading="lazy"></a>
-                <a href="https://youtube.com/@groupnirmal?si=vw5R2dLVZcAu8S32" target="_blank"><img src="assets/images/svg/youtube.svg" alt="youtube" loading="lazy"></a>
-                <a href="https://x.com/NirmalWires" target="_blank"><img src="assets/images/svg/twitter.svg" alt="twitter" loading="lazy"></a>
-                <a href="download.html"><img src="assets/images/svg/download.svg" alt="download" loading="lazy"></a>
+                <a href="https://www.facebook.com/groupnirmal?mibextid=ZbWKwL" target="_blank"><img
+                        src="assets/images/svg/facebook.svg" alt="facebook" loading="lazy" width="20" height="20"></a>
+                <a href="https://www.instagram.com/group.nirmal?igsh=MWFxZ3BqZzgzamhibg==" target="_blank"><img
+                        src="assets/images/svg/instagram.svg" alt="instagram" loading="lazy" width="20" height="20"></a>
+                <a href="https://www.linkedin.com/company/nirmal-wires-private-limited/" target="_blank"><img
+                        src="assets/images/svg/linkedin.svg" alt="linkedin" loading="lazy" width="20" height="20"></a>
+                <a href="https://youtube.com/@groupnirmal?si=vw5R2dLVZcAu8S32" target="_blank"><img
+                        src="assets/images/svg/youtube.svg" alt="youtube" loading="lazy" width="20" height="20"></a>
+                <a href="https://x.com/NirmalWires" target="_blank"><img src="assets/images/svg/twitter.svg"
+                        alt="twitter" loading="lazy" width="20" height="20"></a>
+                <a href="download.html"><img src="assets/images/svg/download.svg" alt="download" loading="lazy" width="20" height="20"></a>
             </div>
             <a href="contact.html"><button>GET IN TOUCH</button></a>
         </div>
         <!-- Menu List -->
         <div class="nav-menu">
             <a href="/" class="menu">
-                <img src="assets/images/menu-icon/menu-icon-01.png" alt="icon" loading="lazy">
+                <img src="assets/images/menu-icon/menu-icon-01.png" alt="icon" loading="lazy" width="40" height="40">
                 <span>Home</span>
             </a>
             <a href="our-story.html" class="menu">
-                <img src="assets/images/menu-icon/menu-icon-02.png" alt="icon" loading="lazy">
+                <img src="assets/images/menu-icon/menu-icon-02.png" alt="icon" loading="lazy" width="40" height="40">
                 <span>Our Story</span>
             </a>
             <a href="products.html" class="menu">
-                <img src="assets/images/menu-icon/menu-icon-03.png" alt="icon" loading="lazy">
+                <img src="assets/images/menu-icon/menu-icon-03.png" alt="icon" loading="lazy" width="40" height="40">
                 <span>Products</span>
             </a>
             <a href="quality-assurance.html" class="menu">
-                <img src="assets/images/menu-icon/menu-icon-04.png" alt="icon" loading="lazy">
+                <img src="assets/images/menu-icon/menu-icon-04.png" alt="icon" loading="lazy" width="40" height="40">
                 <span>Quality Assurance</span>
             </a>
             <a href="trading.html" class="menu">
-                <img src="assets/images/menu-icon/menu-icon-11.png" alt="icon" loading="lazy">
+                <img src="assets/images/menu-icon/menu-icon-11.png" alt="icon" loading="lazy" width="40" height="40">
                 <span>Trading</span>
             </a>
             <a href="our-presence.html" class="menu">
-                <img src="assets/images/menu-icon/menu-icon-06.png" alt="icon" loading="lazy">
+                <img src="assets/images/menu-icon/menu-icon-06.png" alt="icon" loading="lazy" width="40" height="40">
                 <span>Our Presence</span>
             </a>
             <a href="csr.html" class="menu">
-                <img src="assets/images/menu-icon/menu-icon-10.png" alt="icon" loading="lazy">
+                <img src="assets/images/menu-icon/menu-icon-10.png" alt="icon" loading="lazy" width="40" height="40">
                 <span>CSR</span>
             </a>
             <a href="career.php" class="menu">
-                <img src="assets/images/menu-icon/menu-icon-07.png" alt="icon" loading="lazy">
+                <img src="assets/images/menu-icon/menu-icon-07.png" alt="icon" loading="lazy" width="40" height="40">
                 <span>Careers</span>
             </a>
             <a href="view-blog.php" class="menu">
-                <img src="assets/images/menu-icon/blog.png" alt="icon" loading="lazy">
+                <img src="assets/images/menu-icon/blog.png" alt="icon" loading="lazy" width="40" height="40">
                 <span>Blog</span>
             </a>
             <a href="contact.html" class="menu">
-                <img src="assets/images/menu-icon/menu-icon-08.png" alt="icon" loading="lazy">
+                <img src="assets/images/menu-icon/menu-icon-08.png" alt="icon" loading="lazy" width="40" height="40">
                 <span>Contact Us</span>
             </a>
         </div>
@@ -114,7 +119,7 @@
     <!-- WhatsApp Icon Start -->
     <section class="wp">
         <a href="https://wa.me/18003093876" target="_blank">
-            <img src="assets/images/svg/whatsapp.svg" alt="WhatsApp" loading="lazy">
+            <img src="assets/images/svg/whatsapp.svg" alt="WhatsApp" loading="lazy" width="50" height="50">
         </a>
     </section> 
     <!-- WhatsApp Icon End -->
