--- a/railways.html
+++ b/railways.html
@@ -34,67 +34,72 @@
     <nav>
         <div class="nav-left">
             <div class="logo">
-                <a href="/"><img src="assets/images/logo/logo.png" alt="Nirmal" loading="lazy"></a>
+                <a href="/"><img src="assets/images/logo/logo.png" alt="Nirmal" loading="lazy" width="50" height="50"></a>
             </div>
             <div class="line"></div>
             <div class="group-logo">
-                <img src="assets/images/logo/group-logo.jpg" alt="Group Nirmal" loading="lazy">
+                <img src="assets/images/logo/group-logo.jpg" alt="Group Nirmal" loading="lazy" width="50" height="50">
             </div>
             <div class="menu-btn">
-                <button><img src="assets/images/svg/menu.svg" alt="icon" loading="lazy"> MENU</button>
+                <button><img src="assets/images/svg/menu.svg" alt="icon" loading="lazy" width="20" height="20"> MENU</button>
             </div>
         </div>
         <div class="nav-right">
             <div class="social-icons">
-                <a href="https://www.facebook.com/groupnirmal?mibextid=ZbWKwL" target="_blank"><img src="assets/images/svg/facebook.svg" alt="facebook" loading="lazy"></a>
-                <a href="https://www.instagram.com/group.nirmal?igsh=MWFxZ3BqZzgzamhibg==" target="_blank"><img src="assets/images/svg/instagram.svg" alt="instagram" loading="lazy"></a>
-                <a href="https://www.linkedin.com/company/nirmal-wires-private-limited/" target="_blank"><img src="assets/images/svg/linkedin.svg" alt="linkedin" loading="lazy"></a>
-                <a href="https://youtube.com/@groupnirmal?si=vw5R2dLVZcAu8S32" target="_blank"><img src="assets/images/svg/youtube.svg" alt="youtube" loading="lazy"></a>
-                <a href="https://x.com/NirmalWires" target="_blank"><img src="assets/images/svg/twitter.svg" alt="twitter" loading="lazy"></a>
-                <a href="download.html"><img src="assets/images/svg/download.svg" alt="download" loading="lazy"></a>
+                <a href="https://www.facebook.com/groupnirmal?mibextid=ZbWKwL" target="_blank"><img
+                        src="assets/images/svg/facebook.svg" alt="facebook" loading="lazy" width="20" height="20"></a>
+                <a href="https://www.instagram.com/group.nirmal?igsh=MWFxZ3BqZzgzamhibg==" target="_blank"><img
+                        src="assets/images/svg/instagram.svg" alt="instagram" loading="lazy" width="20" height="20"></a>
+                <a href="https://www.linkedin.com/company/nirmal-wires-private-limited/" target="_blank"><img
+                        src="assets/images/svg/linkedin.svg" alt="linkedin" loading="lazy" width="20" height="20"></a>
+                <a href="https://youtube.com/@groupnirmal?si=vw5R2dLVZcAu8S32" target="_blank"><img
+                        src="assets/images/svg/youtube.svg" alt="youtube" loading="lazy" width="20" height="20"></a>
+                <a href="https://x.com/NirmalWires" target="_blank"><img src="assets/images/svg/twitter.svg"
+                        alt="twitter" loading="lazy" width="20" height="20"></a>
+                <a href="download.html"><img src="assets/images/svg/download.svg" alt="download" loading="lazy" width="20" height="20"></a>
             </div>
             <a href="contact.html"><button>GET IN TOUCH</button></a>
         </div>
         <!-- Menu List -->
         <div class="nav-menu">
             <a href="/" class="menu">
-                <img src="assets/images/menu-icon/menu-icon-01.png" alt="icon" loading="lazy">
+                <img src="assets/images/menu-icon/menu-icon-01.png" alt="icon" loading="lazy" width="40" height="40">
                 <span>Home</span>
             </a>
             <a href="our-story.html" class="menu">
-                <img src="assets/images/menu-icon/menu-icon-02.png" alt="icon" loading="lazy">
+                <img src="assets/images/menu-icon/menu-icon-02.png" alt="icon" loading="lazy" width="40" height="40">
                 <span>Our Story</span>
             </a>
             <a href="products.html" class="menu">
-                <img src="assets/images/menu-icon/menu-icon-03.png" alt="icon" loading="lazy">
+                <img src="assets/images/menu-icon/menu-icon-03.png" alt="icon" loading="lazy" width="40" height="40">
                 <span>Products</span>
             </a>
             <a href="quality-assurance.html" class="menu">
-                <img src="assets/images/menu-icon/menu-icon-04.png" alt="icon" loading="lazy">
+                <img src="assets/images/menu-icon/menu-icon-04.png" alt="icon" loading="lazy" width="40" height="40">
                 <span>Quality Assurance</span>
             </a>
             <a href="trading.html" class="menu">
-                <img src="assets/images/menu-icon/menu-icon-11.png" alt="icon" loading="lazy">
+                <img src="assets/images/menu-icon/menu-icon-11.png" alt="icon" loading="lazy" width="40" height="40">
                 <span>Trading</span>
             </a>
             <a href="our-presence.html" class="menu">
-                <img src="assets/images/menu-icon/menu-icon-06.png" alt="icon" loading="lazy">
+                <img src="assets/images/menu-icon/menu-icon-06.png" alt="icon" loading="lazy" width="40" height="40">
                 <span>Our Presence</span>
             </a>
             <a href="csr.html" class="menu">
-                <img src="assets/images/menu-icon/menu-icon-10.png" alt="icon" loading="lazy">
+                <img src="assets/images/menu-icon/menu-icon-10.png" alt="icon" loading="lazy" width="40" height="40">
                 <span>CSR</span>
             </a>
             <a href="career.php" class="menu">
-                <img src="assets/images/menu-icon/menu-icon-07.png" alt="icon" loading="lazy">
+                <img src="assets/images/menu-icon/menu-icon-07.png" alt="icon" loading="lazy" width="40" height="40">
                 <span>Careers</span>
             </a>
             <a href="view-blog.php" class="menu">
-                <img src="assets/images/menu-icon/blog.png" alt="icon" loading="lazy">
+                <img src="assets/images/menu-icon/blog.png" alt="icon" loading="lazy" width="40" height="40">
                 <span>Blog</span>
             </a>
             <a href="contact.html" class="menu">
-                <img src="assets/images/menu-icon/menu-icon-08.png" alt="icon" loading="lazy">
+                <img src="assets/images/menu-icon/menu-icon-08.png" alt="icon" loading="lazy" width="40" height="40">
                 <span>Contact Us</span>
             </a>
         </div>
@@ -103,7 +108,7 @@
 
     <!-- Banner Start -->
     <section class="banner">
-        <img src="assets/images/product-internal/Metal Liners-banner.jpg" alt="banner" loading="lazy">
+        <img src="assets/images/product-internal/Metal Liners-banner.jpg" alt="banner" loading="lazy" width="800" height="400">
         <div class="banner-content">
             <h1 data-aos="fade-up" data-aos-duration="1000">RAILWAYS</h1>
         </div>
@@ -117,7 +122,7 @@
             <!-- Card 1 -->
             <a  href="fish-plate-bars.html" class="category-card" data-aos="fade" data-aos-duration="1000">
                 <div class="card-image">
-                    <img src="assets/images/products/Fish Plate Bars.png" alt="image" loading="lazy">
+                    <img src="assets/images/products/Fish Plate Bars.png" alt="image" loading="lazy" width="100" height="150">
                 </div>
                 <h3>Fish Plate Bars</h3>
                 <p>A fish plate bar, or rail joint bar, is a high-strength steel bar designed...</p>
@@ -125,7 +130,7 @@
             <!-- Card 2 -->
             <a  href="metal-liners.html" class="category-card" data-aos="fade" data-aos-duration="1000">
                 <div class="card-image">
-                    <img src="assets/images/products/Liners-2.png" alt="image" loading="lazy">
+                    <img src="assets/images/products/Liners-2.png" alt="image" loading="lazy" width="100" height="150">
                 </div>
                 <h3>Metal Liners</h3>
                 <p>Metal liners, crucial steel components in railway tracks...</p>
@@ -133,7 +138,7 @@
             <!-- Card 3 -->
             <a href="pc-wire.html" class="category-card" data-aos="fade" data-aos-duration="1000">
                 <div class="card-image">
-                    <img src="assets/images/products/PC Wire.png" alt="image" loading="lazy">
+                    <img src="assets/images/products/PC Wire.png" alt="image" loading="lazy" width="100" height="150">
                 </div>
                 <h3>PC Wire</h3>
                 <p>Prestressed Concrete Wire (PC Wire) is a high-tensile steel wire used to...</p>
@@ -141,7 +146,7 @@
             <!-- Card 4 -->
             <a  href="gi-wire.html" class="category-card" data-aos="fade" data-aos-duration="1000">
                 <div class="card-image">
-                    <img src="assets/images/products/GI Wire-2.png" alt="image" loading="lazy">
+                    <img src="assets/images/products/GI Wire-2.png" alt="image" loading="lazy" width="100" height="150">
                 </div>
                 <h3>GI Wire</h3>
                 <p>Galvanized Iron (GI) wires are drawn from steel wire rods durable and...</p>
@@ -149,7 +154,7 @@
             <!-- Card 5 -->
             <a  href="ACSR.html" class="category-card" data-aos="fade" data-aos-duration="1000">
                 <div class="card-image">
-                    <img src="assets/images/products/Aluminium conductor steel reinforced.png" alt="image" loading="lazy">
+                    <img src="assets/images/products/Aluminium conductor steel reinforced.png" alt="image" loading="lazy" width="100" height="150">
                 </div>
                 <h3>Aluminium Conductor Steel Reinforced</h3>
                 <p>Aluminium Conductor Steel-Reinforced (ACSR) conductors are...</p>
@@ -157,7 +162,7 @@
             <!-- Card 6 -->
             <a  href="aluminium-alloy-conductors.html" class="category-card" data-aos="fade" data-aos-duration="1000">
                 <div class="card-image">
-                    <img src="assets/images/products/Aluminium alloy conductors.png" alt="image" loading="lazy">
+                    <img src="assets/images/products/Aluminium alloy conductors.png" alt="image" loading="lazy" width="100" height="150">
                 </div>
                 <h3>Aluminium Alloy Conductors</h3>
                 <p>All Aluminium Conductors are lightweight, highly conductive, and...</p>
@@ -165,7 +170,7 @@
             <!-- Card 7 -->
             <a  href="ACSR-core-wire-&-strand.html" class="category-card" data-aos="fade" data-aos-duration="1000">
                 <div class="card-image">
-                    <img src="assets/images/products/ACSR Core Wire & Strand.png" alt="image" loading="lazy">
+                    <img src="assets/images/products/ACSR Core Wire & Strand.png" alt="image" loading="lazy" width="100" height="150">
                 </div>
                 <h3>ACSR Core Wire</h3>
                 <p>ACSR core wires are used to reinforce high-voltage conductor lines that...</p>
@@ -173,7 +178,7 @@
             <!-- Card 8 -->
             <a  href="stay-&-earth-wires.html" class="category-card" data-aos="fade" data-aos-duration="1000">
                 <div class="card-image">
-                    <img src="assets/images/products/Stay Wire & Earth Wire.png" alt="image" loading="lazy">
+                    <img src="assets/images/products/Stay Wire & Earth Wire.png" alt="image" loading="lazy" width="100" height="150">
                 </div>
                 <h3>Stay Wire & Earth Wire</h3>
                 <p>Stay wires, also known as Guy wires and HTGS wires are high-strength...</p>
@@ -181,7 +186,7 @@
             <!-- Card 9 -->
             <a  href="mild-steel-wire.html" class="category-card" data-aos="fade" data-aos-duration="1000">
                 <div class="card-image">
-                    <img src="assets/images/products/Mild steel wire.png" alt="image" loading="lazy">
+                    <img src="assets/images/products/Mild steel wire.png" alt="image" loading="lazy" width="100" height="150">
                 </div>
                 <h3>Mild Steel Wire</h3>
                 <p>Mild steel wires, made using low carbon steel, are renowned for...</p>
@@ -289,7 +294,8 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-xl-3 col-md-6 mb-4 mb-md-0">
-                    <img class="img-fluid" src="assets/images/footer-logo.png" alt="Nirmal" width="170" loading="lazy">
+                    <img class="img-fluid" src="assets/images/footer-logo.png" alt="Nirmal" loading="lazy" width="170"
+                        height="40">
                 </div>
                 <div class="col-xl-6">
                     <div class="row">
@@ -305,13 +311,14 @@
                             </div>
                         </div>
                         <div class="col-md-5 col-sm-6 mt-4 mt-sm-0">
-                                <div class="footer-imnner" style="margin-bottom: 2.1rem;">
-                                    <!-- <h5 class="text1"><a href="retail.html" class="text-decoration-none">RETAIL</a></h5> -->
-                                </div>
+                            <div class="footer-imnner" style="margin-bottom: 2.1rem;">
+                                <!-- <h5 class="text1"><a href="retail.html" class="text-decoration-none">RETAIL</a></h5> -->
+                            </div>
                             <div>
                                 <ul class="list-unstyled">
                                     <li><a href="trading.html" class="text-decoration-none">Trading</a></li>
-                                    <li><a href="quality-assurance.html" class="text-decoration-none">Quality Assurance</a></li>
+                                    <li><a href="quality-assurance.html" class="text-decoration-none">Quality Assurance</a>
+                                    </li>
                                     <li><a href="view-blog.php" class="text-decoration-none">Our Blogs</a></li>
                                     <li><a href="our-presence.html" class="text-decoration-none">Our Gallery</a></li>
                                 </ul>
@@ -330,38 +337,44 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-3 d-none d-xl-block text-end" >
+                <div class="col-xl-3 d-none d-xl-block text-end">
                     <h5 class="mb-3">Toll Free No. 1800 309 3876</h5>
                     <div class="social text-end position-relative d-none d-md-block mb-4">
                         <ul class="list-unstyled d-inline-flex mb-0">
                             <li>
                                 <a href="https://www.facebook.com/groupnirmal?mibextid=ZbWKwL" target="_blank">
-                                    <img class="img-fluid" src="assets/images/svg/facebook.svg" alt="Facebook" loading="lazy" />
+                                    <img class="img-fluid" src="assets/images/svg/facebook.svg" alt="Facebook"
+                                        loading="lazy" width="40" height="40" />
                                 </a>
                             </li>
                             <li>
                                 <a href="https://www.instagram.com/group.nirmal?igsh=MWFxZ3BqZzgzamhibg==" target="_blank">
-                                    <img class="img-fluid" src="assets/images/svg/instagram.svg" alt="Instagram" loading="lazy" />
+                                    <img class="img-fluid" src="assets/images/svg/instagram.svg" alt="Instagram"
+                                        loading="lazy" width="40" height="40" />
                                 </a>
                             </li>
                             <li>
                                 <a href="https://www.linkedin.com/company/nirmal-wires-private-limited/" target="_blank">
-                                    <img class="img-fluid" src="assets/images/svg/linkedin.svg" alt="Linkedin" loading="lazy" />
+                                    <img class="img-fluid" src="assets/images/svg/linkedin.svg" alt="Linkedin"
+                                        loading="lazy" width="40" height="40" />
                                 </a>
                             </li>
                             <li>
                                 <a href="https://youtube.com/@groupnirmal?si=vw5R2dLVZcAu8S32" target="_blank">
-                                    <img class="img-fluid" src="assets/images/svg/youtube.svg" alt="Youtube" loading="lazy" />
+                                    <img class="img-fluid" src="assets/images/svg/youtube.svg" alt="Youtube" loading="lazy"
+                                        width="40" height="40" />
                                 </a>
                             </li>
                             <li>
                                 <a href="https://x.com/NirmalWires" target="_blank">
-                                    <img class="img-fluid" src="assets/images/svg/twitter.svg" alt="Twitter" loading="lazy" />
+                                    <img class="img-fluid" src="assets/images/svg/twitter.svg" alt="Twitter" loading="lazy"
+                                        width="40" height="40" />
                                 </a>
                             </li>
                         </ul>
                     </div>
-                    <img class="img-fluid ms-auto" src="assets/images/50-years-2.png" alt="50 years logo" width="75" loading="lazy">
+                    <img class="img-fluid ms-auto" src="assets/images/50-years-2.png" alt="50 years logo" loading="lazy"
+                        width="75" height="75">
                 </div>
             </div>
         </div>
@@ -371,7 +384,7 @@
     <!-- WhatsApp Icon Start -->
     <section class="wp">
         <a href="https://wa.me/18003093876" target="_blank">
-            <img src="assets/images/svg/whatsapp.svg" alt="WhatsApp" loading="lazy">
+            <img src="assets/images/svg/whatsapp.svg" alt="WhatsApp" loading="lazy" width="50" height="50">
         </a>
     </section> 
     <!-- WhatsApp Icon End -->
